chore: update java and spring boot version