@@ -12,15 +12,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.2.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
     </parent>
 
     <properties>
         <kafka.version>2.0.0</kafka.version>
-        <java.version>1.8</java.version>
-        <kotlin.version>1.2.60</kotlin.version>
+        <java.version>12</java.version>
+        <kotlin.version>1.3.41</kotlin.version>
         <core.version>1.2.0</core.version>
-        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
         <elasticsearch.version>6.5.4</elasticsearch.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -108,6 +108,10 @@
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
+                        <compilerArgs>
+                            <arg>--add-exports</arg>
+                            <arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
